--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
     <style>
         body {
@@ -13,6 +16,12 @@
             background-repeat: no-repeat;
             background-position: left center;
             background-size: cover;
+            min-width: 340px;
+        }
+
+        html {
+            font-size: calc(4vw + 4vh + 2vmin);
+            font-family: 'Poppins', sans-serif;
         }
 
         .cat {
@@ -20,7 +29,8 @@
             width: 50%;
             min-width: 340px;
             margin: auto;
-            max-width: 770px;
+            max-width: 450px;
+            animation: cat-animation 2s infinite ease-in-out, cat-animation-2 0.2s infinite ease-in-out;
         }
 
         .cat-body {
@@ -35,6 +45,95 @@
             left: 54%;
             top: 4%;
         }
+
+        .ak-47 {
+            transform: scale(-1, 1) rotate(341deg);
+            position: absolute;
+            width: 60%;
+            left: 33%;
+            top: 46%;
+        }
+
+        h1 {
+            color: white;
+            text-align: center;
+            font-size: 0.5rem;
+            margin: 20px;
+        }
+
+        .birthdate {
+            display: inline-block;
+            font-size: 0.6rem;
+            text-transform: uppercase;
+            margin: 15px 0;
+            color: #ffd800;
+            animation: color-animation 2s infinite ease-in;
+        }
+
+        @keyframes color-animation {
+            from {
+                color: #ffd800;
+            }
+            50% {
+                color: #00e6ff;
+            }
+            to {
+                color: #ffd800;
+            }
+        }
+
+        @keyframes cat-animation {
+            from {
+                transform: rotate(75deg);
+                left: -100px;
+            }
+            50% {
+                transform: rotate(-45deg);
+                left: 50px;
+            }
+            100% {
+                transform: rotate(75deg);
+                left: -100px;
+            }
+        }
+
+        @keyframes cat-animation-2 {
+            from {
+                top: 5px;
+            }
+            50% {
+                top: -5px;
+
+            }
+            100% {
+                top: 5px;
+            }
+        }
+
+        a {
+            color: #ffd800;
+        }
+
+        .bullet {
+            position: fixed;
+            width: 20px;
+            height: 8px;
+            border-bottom-left-radius: 50%;
+            border-top-left-radius: 50%;
+
+            background: white;
+            margin-left: -20px;
+            animation: bullet-animation 2s ease-in;
+        }
+
+        @keyframes bullet-animation {
+            from {
+                margin-top: 0;
+            }
+            100% {
+                margin-top: 2000px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -42,6 +141,45 @@
 <div class="cat">
     <img class="cat-body" src="./cat.png" alt="">
     <img class="vr" src="./vr.png" alt="">
+    <img class="ak-47" src="./ak-47.png" alt="">
 </div>
+
+<h1>
+    Дорогой друг
+    <br>
+    Приглашаю тебя на свой
+    <br>
+    <span class="birthdate">день рождения!</span>
+    <br>
+    <span class="date">13 ноября (воскресение)</span>
+    <br>
+    <span class="time">в 14:45</span>
+    <br>
+    <span>в
+        <a href="https://teleport.by/">ПАРК TELEPORT VR</a>
+    </span>
+    <br>
+</h1>
+
+<div class="bullet-area"></div>
+
+<script>
+    const ak47 = document.querySelector('.ak-47')
+    const bulletArea = document.querySelector('.bullet-area')
+
+    setInterval(() => {
+        const rect = ak47.getBoundingClientRect()
+        const degree = ((Math.atan2(rect.top - rect.bottom, rect.left - rect.right) + 2 * Math.PI) * 180 / Math.PI) % 360
+        const bullet = document.createElement('div');
+        bullet.classList.add('bullet')
+        bullet.style.left = rect.right + 'px';
+        bullet.style.top = rect.bottom + 'px';
+        bullet.style.transform = `rotate(${degree + 10}deg)`;
+        bullet.style.background = "#" + ((1<<24)*Math.random() | 0).toString(16);
+        bulletArea.appendChild(bullet);
+        setTimeout(() => bullet.remove(), 1000);
+    }, 37)
+
+</script>
 </body>
 </html>
